--- a/index.html
+++ b/index.html
@@ -101,13 +101,21 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Technologies</h2>
+                     <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Technologies & Skills</h2>
                     <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-                </div>
+                        <div class="logo-div d-flex flex-row">
+
+                                <img class="logo-img w-100" src="img/html-logo.png" >
+                                <img class="logo-img w-100" src="img\css3.svg" >
+
+                                <img class="logo-img w-100" src="img\javascript-logo.png" >
+
+                                <img class="logo-img w-100" src="img/react-logo.png" >
+
+                        </div>
             </div>
-        </div>
+         </div>
     </section>
 
     <!-- Contact Section -->
