added jquery logo to list of technologies

--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
                         <div class="logo-div d-flex flex-row">
 
                                 <img class="logo-img w-100" src="img/html-logo.png" >
-                                <img class="logo-img w-100" src="img\css3.svg" >
-
-                                <img class="logo-img w-100" src="img\javascript-logo.png" >
-
                                 <img class="logo-img w-100" src="img/react-logo.png" >
+                                <img class="logo-img w-100" src="img\javascript-logo.png">
+                                <img class="logo-img w-100" src="img\jQuery logo.png">
 
                         </div>
             </div>
