added the mysqql logo

--- a/index.html
+++ b/index.html
@@ -101,17 +101,26 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                     <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Technologies & Skills</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                        <div class="logo-div d-flex flex-row">
+                     <div class="col-lg-8 col-lg-offset-2 container">
+                    <h2>Skills & Technologies</h2>
 
-                                <img class="logo-img w-100" src="img/html-logo.png" >
-                                <img class="logo-img w-100" src="img/react-logo.png" >
-                                <img class="logo-img w-100" src="img\javascript-logo.png">
-                                <img class="logo-img w-100" src="img\jQuery logo.png">
+                        <div class="d-flex align-content-around flex-wrap">
+                            <div>
+                                <img class="logo-img " src="img/html-logo.png">
+                            </div>
+                            <div>
+                        <img class="logo-img " src="img/react-logo.png">
+                            </div>
+
+                            <!-- <div> -->
+                            <img class="logo-img" src="img/javascript-logo.png">
+                            <!-- </div> -->
+
+                                <img class="logo-img" src="img/jQuery logo.png">
+                                <img class="logo-img" src="img/mysql-logo.png">
 
                         </div>
+                    </div>
             </div>
          </div>
     </section>
