added the github and php logos

--- a/index.html
+++ b/index.html
@@ -101,15 +101,17 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                     <div class="col-lg-8 col-lg-offset-2 container">
+                     <div class="col-lg-8 col-lg-offset-2">
                     <h2>Skills & Technologies</h2>
-
-                        <div class="d-flex align-content-around flex-wrap">
+                        <div>
                             <div>
-                                <img class="logo-img " src="img/html-logo.png">
+                                <img class="logo-img" src="img/html-logo.png">
+
+
                             </div>
                             <div>
-                        <img class="logo-img " src="img/react-logo.png">
+                                <img class="logo-img " src="img/react-logo.png">
+
                             </div>
 
                             <!-- <div> -->
@@ -118,6 +120,8 @@
 
                                 <img class="logo-img" src="img/jQuery logo.png">
                                 <img class="logo-img" src="img/mysql-logo.png">
+                                <img class="logo-img" src="img/php-logo.png">
+                                <img class="logo-img" src="img/githubLogo.jpg">
 
                         </div>
                     </div>
