--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -27,13 +28,13 @@
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
+     Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -101,9 +102,9 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                     <div class="col-lg-8 col-lg-offset-2">
+                     <div class="col-lg-10 col-lg-offset-1">
                     <h2>Skills & Technologies</h2>
-                        <div>
+                        <div class="d-flex justify-content-between flex-wrap">
                             <div>
                                 <img class="logo-img" src="img/html-logo.png">
 
@@ -114,14 +115,23 @@
 
                             </div>
 
-                            <!-- <div> -->
+                            <div>
                             <img class="logo-img" src="img/javascript-logo.png">
-                            <!-- </div> -->
+                            </div>
+                            <div>
+                            <img class="logo-img" src="img/jQuery logo.png">
+                            </div>
+                            <div>
+                            <img class="logo-img" src="img/mysql-logo.png">
+                            </div>
+                            <div>
+                            <img class="logo-img" src="img/php-logo.png">
+                            </div>
+                            <div>
+                            <img class="logo-img" src="img/githubLogo.jpg">
+                            </div>
 
-                                <img class="logo-img" src="img/jQuery logo.png">
-                                <img class="logo-img" src="img/mysql-logo.png">
-                                <img class="logo-img" src="img/php-logo.png">
-                                <img class="logo-img" src="img/githubLogo.jpg">
+
 
                         </div>
                     </div>
