completed the nav bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,47 @@
   <title>Document</title>
 </head>
 <body>
+<!--Nav Bar-->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<div class="container-fluid">
+  <!--logo would go here in an a tag
+  <a class="navbar-brand" href="#"><img src=" LINK HERE"></a>
+  -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+  data-target="#navbarResponsive">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Connect</a>
+        </li>
+      </ul>
+  </div>
+</div>
+</nav>
+
+
+
+<!--Carousel/Image Slider (probably just going to put an image here)-->
+<div id="slides" class="carousel slide" data-ride="carousel">
+
+</div>
+
+
+
+
+
+
 
 
 
