--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="mainstylesheet.css" rel="stylesheet">
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+
+  <script src="https://use.fontawesome.com/80060db548.js"></script>
+  <!-- <link rel="stylesheet" href="css/fontawesome.css" type="text/css">
+  <link rel="stylesheet" href="css/all.css" type="text/css"> -->
+  <link href="css/mainstylesheet.css" rel="stylesheet" type="text/css">
+
+
   <title>Document</title>
 </head>
 <body>
@@ -42,16 +46,38 @@
 </div>
 </nav>
 
+<!--Insert picture?/ Background-->
 
+<!--About me Div-->
+<div class="container-fluid padding">
+  <div class="row aboutMe text-center">
+    <div class="col-12">
+      <h1 class="display-4">About Me</h1>
+    </div>
+    <hr>
+    <div class="col-12">
+      <p class="lead">ABOUT ME HERE</p>
+    </div>
+  </div>
+</div>
 
-<!--Carousel/Image Slider (probably just going to put an image here)-->
-<div id="slides" class="carousel slide" data-ride="carousel">
+<hr class="my-4">
+<div class="container-fluid padding">
+<div class="row text-center padding">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+
+<i class="fab fa-accessible-icon"></i>
+
+    </div>
+</div>
 
 </div>
 
+<i class="fa fa-accessible-icon"></i>
+<i class="fa fa-bacon"></i>
 
 
-
+<i class="fa fa-volume-up"></i>
 
 
 
