added the skills and technologies section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-  <script src="https://use.fontawesome.com/80060db548.js"></script>
-  <!-- <link rel="stylesheet" href="css/fontawesome.css" type="text/css">
-  <link rel="stylesheet" href="css/all.css" type="text/css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link href="css/mainstylesheet.css" rel="stylesheet" type="text/css">
 
 
@@ -63,21 +65,48 @@
 
 <hr class="my-4">
 <div class="container-fluid padding">
+  <h1>Skills & Technologies</h1>
 <div class="row text-center padding">
-    <div class="col-xs-12 col-sm-6 col-md-4">
 
-<i class="fab fa-accessible-icon"></i>
+    <div class="d-flex flex-wrap skills">
+    <div class="icon">
+      <i class="fab fa-html5"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-js-square"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-css3-alt"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-bootstrap"></i>
+    </div>
+    </div>
+    <div class="d-flex flex-wrap moreskills">
+      <div class="icon">
+        <i class="fab fa-php"></i>
+      </div>
+    <div class="icon ml-5">
+      <i class="fab fa-react"></i>
+    </div>
+    <div class="icon">
+      <i class="fab fa-github"></i>
+    </div>
+    <div class="icon">
+      <i class="devicon-mysql-plain"></i>
+    </div>
+    <div class="icon">
+      <i class="devicon-jquery-plain"></i>
+    </div>
+
+    </div>
 
     </div>
 </div>
 
 </div>
 
-<i class="fa fa-accessible-icon"></i>
-<i class="fa fa-bacon"></i>
 
-
-<i class="fa fa-volume-up"></i>
 
 
 
