--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 </nav>
 
 <!--Insert picture?/ Background-->
-
+<div class="d-flex justify-content-center">
+  <img src="img/sunset1.jpg">
+</div>
 <!--About me Div-->
 <div class="container-fluid padding">
   <div class="row aboutMe text-center">
@@ -70,10 +72,10 @@
 
     <div class="d-flex flex-wrap skills">
     <div class="icon">
-      <i class="fab fa-html5"></i>
+      <i class="fab fa-js-square"></i>
     </div>
     <div class="icon">
-      <i class="fab fa-js-square"></i>
+      <i class="fab fa-html5"></i>
     </div>
     <div class="icon">
       <i class="fab fa-css3-alt"></i>
