added the background picture and headers above my about me section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 </nav>
 
 <!--Insert picture?/ Background-->
-<div class="d-flex justify-content-center">
-  <img src="img/sunset1.jpg">
+<div class="backgroundPic d-flex justify-content-center">
+<pre>
+<h1> Anjaleena Barclay</h1><h5> A full-stack web developer located in Orange County.</h5>
+</pre>
+
 </div>
 <!--About me Div-->
 <div class="container-fluid padding">
