--- a/index.html
+++ b/index.html
@@ -48,21 +48,23 @@
 </div>
 </nav>
 
-<!--Insert picture?/ Background-->
+<!--Main Background-->
 <div class="backgroundPic d-flex justify-content-center">
 <pre>
 <h1> Anjaleena Barclay</h1><h5> A full-stack web developer located in Orange County.</h5>
 </pre>
 
 </div>
+
 <!--About me Div-->
 <div class="container-fluid padding">
   <div class="row aboutMe text-center">
     <div class="col-12">
-      <h1 class="display-4">About Me</h1>
+      <h1>About Me</h1>
     </div>
     <hr>
-    <div class="col-12">
+    <div class="d-flex justify-content-around col-12">
+    <div class="introPhoto"></div>
       <p class="lead">ABOUT ME HERE</p>
     </div>
   </div>
@@ -109,7 +111,27 @@
     </div>
 </div>
 
+<!--- Projects Div --->
+<hr class="my-4">
+
+<div class="container-fluid padding">
+<h1>Projects</h1>
+
 </div>
+
+<!--- Projects Div --->
+<hr class="my-4">
+
+<div class="container-fluid padding">
+  <h1>Connect With Me</h1>
+<a href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/">
+  <i class="linkedInLink fab fa-linkedin"></i>
+</a>
+<a href="https://github.com/anjaleenab">
+  <i class="gitHubLink fab fa-github"></i>
+</a>
+</div>
+
 
 
 
