added the contact section and added color to the icons

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 <!--Main Background-->
 <div class="backgroundPic d-flex justify-content-center">
-<pre>
+<div class="backgroundIntro justify-content-center">
 <h1> Anjaleena Barclay</h1><h5> A full-stack web developer located in Orange County.</h5>
-</pre>
+</div>
 
 </div>
 
@@ -124,12 +124,22 @@
 
 <div class="container-fluid padding">
   <h1>Connect With Me</h1>
-<a href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/">
+<div class="links d-flex justify-content-center">
+<a class="m-5" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/">
   <i class="linkedInLink fab fa-linkedin"></i>
 </a>
-<a href="https://github.com/anjaleenab">
+<a class="m-5" href="https://github.com/anjaleenab">
   <i class="gitHubLink fab fa-github"></i>
 </a>
+<div class=" mt-5">
+    <a class="m-5 emailLink " href="mailto:anjaleenabarclay@aol.com">
+  <i class="mail fas fa-envelope">
+  </i>
+  anjaleenabarclay@aol.com
+
+  </a>
+</div>
+</div>
 </div>
 
 
