--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 </div>
-
+<!--Skills & Tech-->
 <hr class="my-4">
 <div class="container-fluid padding">
   <h1>Skills & Technologies</h1>
@@ -116,7 +116,21 @@
 
 <div class="container-fluid padding">
 <h1>Projects</h1>
+<div class="d-flex justify-content-around">
 
+<div class="project mt-3">
+<div class="projImage holidaySales"></div>
+</div>
+
+<div class="project mt-3">
+
+</div>
+
+<div class="project mt-3">
+
+</div>
+
+</div>
 </div>
 
 <!--- Projects Div --->
