added the links for the nav bar

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#aboutMe">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Skills</a>
+          <a class="nav-link" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Connect</a>
+          <a class="nav-link" href="#connect">Connect</a>
         </li>
       </ul>
   </div>
@@ -57,7 +57,7 @@
 </div>
 
 <!--About me Div-->
-<div class="container-fluid padding">
+<div class="container-fluid padding" id="aboutMe">
   <div class="row aboutMe text-center">
     <div class="col-12">
       <h1>About Me</h1>
@@ -70,7 +70,7 @@
   </div>
 </div>
 <!--Skills & Tech-->
-<hr class="my-4">
+<hr class="my-4" id="skills">
 <div class="container-fluid padding">
   <h1>Skills & Technologies</h1>
 <div class="row text-center padding">
@@ -112,7 +112,7 @@
 </div>
 
 <!--- Projects Div --->
-<hr class="my-4">
+<hr class="my-4" id="projects">
 
 <div class="container-fluid padding">
 <h1>Projects</h1>
@@ -136,7 +136,7 @@
 <!--- Projects Div --->
 <hr class="my-4">
 
-<div class="container-fluid padding">
+<div class="container-fluid padding" id="connect">
   <h1>Connect With Me</h1>
 <div class="links d-flex justify-content-center">
 <a class="m-5" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/">
