added a UL and styling to the project listing

--- a/index.html
+++ b/index.html
@@ -116,11 +116,23 @@
 
 <div class="container-fluid padding">
 <h1>Projects</h1>
-<div class="d-flex justify-content-around">
+<div class="d-flex justify-content-center">
 
 <div class="project mt-3">
-<div class="projImage holidaySales"></div>
+<a href="https://holidaysales.anjaleenab.com">
+<div class="projImage holidaySales">
 </div>
+<ul>Holiday Sales
+  <li>HTML5</li>
+  <li>CSS3</li>
+  <li>React</li>
+  <li>PHP</li>
+  <li>MYSQL</li>
+</ul>
+</div>
+</a>
+
+
 
 <div class="project mt-3">
 
@@ -133,7 +145,7 @@
 </div>
 </div>
 
-<!--- Projects Div --->
+<!--- Connect Div --->
 <hr class="my-4">
 
 <div class="container-fluid padding" id="connect">
