styled the project section a little more

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="container-fluid padding" id="aboutMe">
   <div class="row aboutMe text-center">
     <div class="col-12">
-      <h1>About Me</h1>
+      <h1 class="heading">About Me</h1>
     </div>
     <hr>
     <div class="d-flex justify-content-around col-12">
@@ -115,35 +115,60 @@
 <hr class="my-4" id="projects">
 
 <div class="container-fluid padding">
-<h1>Projects</h1>
-<div class="d-flex justify-content-center">
-
+  <h1>Projects</h1>
+<div class="d-flex justify-content-around">
 <div class="project mt-3">
-<a href="https://holidaysales.anjaleenab.com">
-<div class="projImage holidaySales">
-</div>
-<ul>Holiday Sales
-  <li>HTML5</li>
-  <li>CSS3</li>
-  <li>React</li>
-  <li>PHP</li>
-  <li>MYSQL</li>
-</ul>
-</div>
-</a>
-
-
-
-<div class="project mt-3">
-
+  <div class="projImage lionkingmemorymatch">
+  </div>
+  <ul>Lion King Memory Match
+    <li>HTML5</li>
+    <li>CSS3</li>
+    <li>jQuery</li>
+  </ul>
+  <div class="d-flex justify-content-around margin">
+    <a href="https://lionkingmemorymatch.anjaleenab.com/" class="card-link">Live Site</a>
+    <a href="https://github.com/anjaleenab/Lion-King-Memory-Match" class="card-link">Source Code</a>
+  </div>
 </div>
 
 <div class="project mt-3">
+  <div class="projImage holidaySales">
+  </div>
+  <ul>Holiday Sales
+    <li>HTML5</li>
+    <li>CSS3</li>
+    <li>React</li>
+    <li>PHP</li>
+    <li>MYSQL</li>
+  </ul>
+  <div class="d-flex justify-content-around mb-3">
+    <a href="https://holidaysales.anjaleenab.com" class="card-link">Live Site</a>
+    <a href="https://github.com/anjaleenab/holiday-sales" class="card-link">Source Code</a>
+  </div>
+</div>
+
+<div class="project mt-3">
+  <div class="projImage prov">
+  </div>
+  <ul>Prov
+    <li>HTML5</li>
+    <li>CSS3</li>
+    <li>React</li>
+    <li>PHP</li>
+    <li>MYSQL</li>
+  </ul>
+  <div class="d-flex justify-content-around mb-3">
+    <a href="https://prov.anjaleenab.com" class="card-link">Live Site</a>
+    <a href="https://github.com/anjaleenab/LessonPlanSharer" class="card-link">Source Code</a>
+  </div>
+</div>
+
+</div>
+</div>
+</div>
 
 </div>
 
-</div>
-</div>
 
 <!--- Connect Div --->
 <hr class="my-4">
