edited the about me section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <hr>
     <div class="d-flex justify-content-around col-12">
     <div class="introPhoto"></div>
-      <p class="lead">ABOUT ME HERE</p>
+      <p class="lead">--Under Construction--</p>
     </div>
   </div>
 </div>
@@ -189,6 +189,9 @@
   anjaleenabarclay@aol.com
 
   </a>
+  <!-- <a class="m-5 resume" href="">
+  <i class="fas fa-file"></i>Resume
+  </a> -->
 </div>
 </div>
 </div>
