added the about me to the about me section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="css/mainstylesheet.css" rel="stylesheet" type="text/css">
 
 
-  <title>Document</title>
+  <title>Anjaleena Barclay</title>
 </head>
 <body>
 <!--Nav Bar-->
@@ -51,21 +51,41 @@
 <!--Main Background-->
 <div class="backgroundPic d-flex justify-content-center">
 <div class="backgroundIntro justify-content-center">
-<h1> Anjaleena Barclay</h1><h5> A full-stack web developer located in Orange County.</h5>
+<h1> Anjaleena Barclay</h1><h5> A web developer located in Orange County.</h5>
 </div>
 
 </div>
 
 <!--About me Div-->
 <div class="container-fluid padding" id="aboutMe">
-  <div class="row aboutMe text-center">
+  <div class="row aboutMe">
     <div class="col-12">
       <h1 class="heading">About Me</h1>
     </div>
     <hr>
-    <div class="d-flex justify-content-around col-12">
-    <div class="introPhoto"></div>
-      <p class="lead">--Under Construction--</p>
+    <div class="d-flex justify-content-center col mt-2">
+      <div class="introPhoto mt-4"></div>
+      <div class="aboutMeText">
+<p>
+Hi, my name is Anjaleena Barclay. I am a developer based in Orange County, California. I have always been interested in
+the way things work. In May of 2019, I graduated from Cal State University of Fullerton with a double major in
+business administration with a concentration in Information Systems and psychology.
+</p>
+<p>
+In my information systems courses, I had the opportunity to learn how the foundation of information systems work. This
+included learning about the internet, databases and the software development life cycle. I had the opportunity to shadow
+an information technology department. During this time, I realized just how much learning I would get to do with a
+career in information systems. I decided that I would be most interested in learning about and being a part of the
+software development process.
+</p>
+<p>
+I decided to attend an advanced full-stack web development program called LearningFuze. Through 12+ hour coding days at
+LearningFuze, I was able to take a closer look at the software development life cycle and learn new skills such as
+JavaScript, HTML, CSS. My experience at LearningFuze was amazing. Every day I felt excited to challenge myself, learn
+and create. I am excited to continue learning, growing and developing. I am open to any opportunities related to
+web and project development. Please feel free to connect with me.
+</p>
+      </div>
     </div>
   </div>
 </div>
@@ -90,12 +110,12 @@
     </div>
     </div>
     <div class="d-flex flex-wrap moreskills">
+      <div class="icon ml-5">
+        <i class="fab fa-react"></i>
+      </div>
       <div class="icon">
         <i class="fab fa-php"></i>
       </div>
-    <div class="icon ml-5">
-      <i class="fab fa-react"></i>
-    </div>
     <div class="icon">
       <i class="fab fa-github"></i>
     </div>
