added the link to my resume

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@ web and project development. Please feel free to connect with me.
   anjaleenabarclay@aol.com
 
   </a>
-  <!-- <a class="m-5 resume" href="">
-  <i class="fas fa-file"></i>Resume
-  </a> -->
+  <a class="m-5 resume" href="https://docs.google.com/document/d/1oAFFdHuDT_T4Ciw4wcrHk_oNirYsg-y8YabQ5zeQ6eA/export?format=pdf">
+  <i class="fas fa-file"></i> Resume
+  </a>
 </div>
 </div>
 </div>
