changed the link tag to open resume in new tab

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ web and project development. Please feel free to connect with me.
   anjaleenabarclay@aol.com
 
   </a>
-  <a class="m-5 resume" href="https://docs.google.com/document/d/1oAFFdHuDT_T4Ciw4wcrHk_oNirYsg-y8YabQ5zeQ6eA/export?format=pdf">
+  <a class="m-5 resume" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank">
   <i class="fas fa-file"></i> Resume
   </a>
 </div>
