made bottom links bigger and added flex-column to them

--- a/index.html
+++ b/index.html
@@ -202,14 +202,15 @@ web and project development. Please feel free to connect with me.
 <a class="m-5" href="https://github.com/anjaleenab">
   <i class="gitHubLink fab fa-github"></i>
 </a>
-<div class=" mt-5">
-    <a class="m-5 emailLink " href="mailto:anjaleenabarclay@aol.com">
+
+<div class="d-flex flex-column bottomLinks">
+    <a class="ml-5 emailLink " href="mailto:anjaleenabarclay@aol.com">
   <i class="mail fas fa-envelope">
   </i>
   anjaleenabarclay@aol.com
 
   </a>
-  <a class="m-5 resume" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank">
+  <a class="ml-5 resume" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank">
   <i class="fas fa-file"></i> Resume
   </a>
 </div>
