added target attribute to 2 links at the bottom of the webpage

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ web and project development. Please feel free to connect with me.
 <div class="container-fluid padding" id="connect">
   <h1>Connect With Me</h1>
 <div class="links d-flex justify-content-center">
-<a class="m-5" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/">
+<a class="m-5" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank">
   <i class="linkedInLink fab fa-linkedin"></i>
 </a>
 <a class="m-5" href="https://github.com/anjaleenab">
@@ -204,7 +204,7 @@ web and project development. Please feel free to connect with me.
 </a>
 
 <div class="d-flex flex-column bottomLinks">
-    <a class="ml-5 emailLink " href="mailto:anjaleenabarclay@aol.com">
+    <a class="ml-5 emailLink " href="mailto:anjaleenabarclay@aol.com" target="blank">
   <i class="mail fas fa-envelope">
   </i>
   anjaleenabarclay@aol.com
