started using the template and updating it

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <div class="d-flex justify-content-center col mt-2">
       <div class="introPhoto mt-4"></div>
       <div class="aboutMeText">
+        <div>
 <p>
 Hi, my name is Anjaleena Barclay. I am a developer based in Orange County, California. I have always been interested in
 the way things work. In May of 2019, I graduated from Cal State University of Fullerton with a double major in
@@ -83,6 +84,7 @@ JavaScript, HTML, CSS. My experience at LearningFuze was amazing. Every day I fe
 and create. I am excited to continue learning, growing and developing. I am open to any opportunities related to
 web and project development. Please feel free to connect with me.
 </p>
+</div>
       </div>
     </div>
   </div>
