--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
@@ -56,16 +58,42 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>About Me</h2>
+
+
+								<div class="aboutMe">
+									<div class="enclosing">
+
+										<div class="imageMe"></div>
+									</div>
+
+										<!-- <img class="imageMe" src="../img/me.jpg"> -->
+										<p>
+											Hi, my name is Anjaleena Barclay. I am a developer based in Orange County, California. I have always been
+											interested in
+											the way things work. In May of 2019, I graduated from Cal State University of Fullerton with a double major in
+											business administration with a concentration in Information Systems and psychology.
+
+											In my information systems courses, I had the opportunity to learn how the foundation of information systems work.
+											This
+											included learning about the internet, databases and the software development life cycle. I had the opportunity to
+											shadow
+											an information technology department. During this time, I realized just how much learning I would get to do with a
+											career in information systems. I decided that I would be most interested in learning about and being a part of the
+											software development process.
+
+											I decided to attend an advanced full-stack web development program called LearningFuze. Through 12+ hour coding
+											days at
+											LearningFuze, I was able to take a closer look at the software development life cycle and learn new skills such as
+											JavaScript, HTML, CSS. My experience at LearningFuze was amazing. Every day I felt excited to challenge myself,
+											learn
+											and create. I am excited to continue learning, growing and developing. I am open to any opportunities related to
+											web and project development. Please feel free to connect with me.
+										</p>
+								</div>
+
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+
 						</div>
 					</section>
 
@@ -148,14 +176,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<h1>Connect With Me</h1>
-
-
+			<div class="links d-flex justify-content-center">
+						<span>anjaleenabarclay@aol.com</span>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/anjaleenab" target="blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:anjaleenabarclay@aol.com" target="blank" class="icon fas fa-envelope"><span class="label">Instagram</span></a></li>
+							<li><a href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank" class="icon fas fa-file"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
