--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -28,11 +28,10 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="#one">Home</a></li>
-											<li><a href="#two">Generic</a></li>
-											<li><a href="#three">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#one">About Me</a></li>
+											<li><a href="#two">Projects</a></li>
+											<li><a href="#three">Skills</a></li>
+											<li><a href="#footer">Connect</a></li>
 										</ul>
 									</div>
 								</li>
