added the lion king memory match picture

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -99,9 +99,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
+							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%" src="../img/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
+								<h2>Lion King Memory Match</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
