--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -99,21 +99,20 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project1" style="width: 80%;height:55%;" src="../img/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
 								<h2>Lion King Memory Match</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project2" style="width: 80%;height:55%;" src="../img/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
 								<h2>Holiday Sales</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
+							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
+								<h2>Prov</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
