added the descriptions for each project

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -101,19 +101,50 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
 								<h2>Lion King Memory Match</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<ul>
+									<li>HTML5</li>
+									<li>CSS3</li>
+									<li>jQuery</li>
+								</ul>
+								<div>
+									<a href="https://lionkingmemorymatch.anjaleenab.com/">Live Site</a>
+									<br />
+									<a href="https://github.com/anjaleenab/Lion-King-Memory-Match">Source Code</a>
+								</div>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
 								<h2>Holiday Sales</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<ul>
+									<li>HTML5</li>
+									<li>CSS3</li>
+									<li>React</li>
+									<li>PHP</li>
+									<li>MYSQL</li>
+								</ul>
+								<div>
+									<a href="https://holidaysales.anjaleenab.com">Live Site</a>
+									<br />
+									<a href="https://github.com/anjaleenab/holiday-sales">Source Code</a>
+								</div>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
 								<h2>Prov</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<ul>
+									<li>HTML5</li>
+									<li>CSS3</li>
+									<li>React</li>
+									<li>PHP</li>
+									<li>MYSQL</li>
+								</ul>
+								<div>
+									<a href="https://prov.anjaleenab.com">Live Site</a>
+									<br />
+									<a href="https://github.com/anjaleenab/LessonPlanSharer">Source Code</a>
+								</div>
 							</div>
 						</section>
 					</section>
