removed the color styling from the features section

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -153,15 +153,20 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Skills and Technologies</h2>
 							</header>
+
+							<div class="icon">
+								<li class="fab fa-js-square"></i>
+							</div>
+
+
+
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
+								<!-- <li class="icon fa-paper-plane-o">
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								</li> -->
 								<li class="icon fa-laptop">
 									<h3>Ac Augue Eget</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
@@ -182,7 +187,7 @@
 									<h3>Tortor Ut</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
