resized all of the icons

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -163,34 +163,34 @@
 
 
 							<!-- <ul class="features"> -->
-								<div class="all-Icons">
+								<div class="all-Icons" >
 								<div class="icon">
-									<li class="fab fa-js-square"></i>
+									<i style="font-size: calc(25px + 11vmin);"class="fab fa-js-square"></i>
 								</div>
 								<div class="icon">
-									<i class="fab fa-html5"></i>
 								</div>
+								<i style="font-size: calc(25px + 11vmin);" class="fab fa-html5"></i>
 								<div class="icon">
-									<i class="fab fa-css3-alt"></i>
 								</div>
+								<i style="font-size: calc(25px + 11vmin);" class="fab fa-css3-alt"></i>
 
 								<div class="icon">
-									<i class="fab fa-bootstrap"></i>
+									<i style="font-size: calc(25px + 11vmin);" class="fab fa-bootstrap"></i>
 								</div>
 
 								<div>
-									<i class="fab fa-react"></i>
+									<i style="font-size: calc(25px + 11vmin);" class="fab fa-react"></i>
 								</div>
 								<div class="icon">
-									<i class="fab fa-php"></i>
+									<i style="font-size: calc(25px + 11vmin);" class="fab fa-php"></i>
 								</div>
 								<div class="icon">
-									<i class="fab fa-github"></i>
+									<i style="font-size: calc(25px + 11vmin);" class="fab fa-github"></i>
 								</div>
 
-								<i class="devicon-mysql-plain"></i>
+								<i style="font-size: calc(25px + 11vmin);" class="devicon-mysql-plain"></i>
 
-								<i class="devicon-jquery-plain"></i>
+								<i style="font-size: calc(25px + 11vmin);" class="devicon-jquery-plain"></i>
 
 								</div>
 
