deleted second to last section of the template

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -163,34 +163,42 @@
 
 
 							<!-- <ul class="features"> -->
-								<div class="all-Icons" >
-								<div class="icon">
-									<i style="font-size: calc(25px + 11vmin);"class="fab fa-js-square"></i>
-								</div>
-								<div class="icon">
-								</div>
-								<i style="font-size: calc(25px + 11vmin);" class="fab fa-html5"></i>
-								<div class="icon">
-								</div>
-								<i style="font-size: calc(25px + 11vmin);" class="fab fa-css3-alt"></i>
-
-								<div class="icon">
-									<i style="font-size: calc(25px + 11vmin);" class="fab fa-bootstrap"></i>
-								</div>
-
 								<div>
-									<i style="font-size: calc(25px + 11vmin);" class="fab fa-react"></i>
-								</div>
-								<div class="icon">
-									<i style="font-size: calc(25px + 11vmin);" class="fab fa-php"></i>
-								</div>
-								<div class="icon">
-									<i style="font-size: calc(25px + 11vmin);" class="fab fa-github"></i>
-								</div>
+									<div>
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-js-square"></i>
+										</div>
+									</div>
+									<div class="all-Icons">
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-html5"></i>
+										</div>
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-bootstrap"></i>
+										</div>
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-css3-alt"></i>
+										</div>
+									</div>
+									<div class="all-Icons1">
+										<div>
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-react"></i>
+										</div>
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-php"></i>
+										</div>
+										<div class="icon">
+											<i style="font-size: calc(25px + 11vmin);" class="fab fa-github"></i>
+										</div>
 
-								<i style="font-size: calc(25px + 11vmin);" class="devicon-mysql-plain"></i>
+										<i style="font-size: calc(25px + 11vmin);" class="devicon-mysql-plain"></i>
 
-								<i style="font-size: calc(25px + 11vmin);" class="devicon-jquery-plain"></i>
+										<i style="font-size: calc(25px + 11vmin);" class="devicon-jquery-plain"></i>
+
+
+									</div>
+
+
 
 								</div>
 
@@ -198,7 +206,7 @@
 					</section>
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<!-- <section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
@@ -209,7 +217,7 @@
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer id="footer">
