changed the size of the links a the bottom of the webpage and changed the color fo the icons

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -210,10 +210,10 @@
 			<div class="links d-flex justify-content-center">
 						<span>anjaleenabarclay@aol.com</span>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
-							<li><a href="https://github.com/anjaleenab" target="blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
-							<li><a href="mailto:anjaleenabarclay@aol.com" target="blank" class="icon fas fa-envelope"><span class="label">Instagram</span></a></li>
-							<li><a href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank" class="icon fas fa-file"><span class="label">Instagram</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://github.com/anjaleenab" target="blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="mailto:anjaleenabarclay@aol.com" target="blank" class="icon fas fa-envelope"><span class="label">Instagram</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank" class="icon fas fa-file"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
