--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -44,7 +44,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-
+						<div class="floating" style="height: 200px; width: 800px;font-size: 50px;">Anjaleena Barclay
+							<div style="height: 400px; width: 800px;font-size: 50px;margin-top:30px;">Web Developer</div>
+						</div>
 							<ul class="actions special">
 
 							</ul>
