--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -44,8 +44,11 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-						<div class="floating" style="height: 200px; width: 800px;font-size: 50px;">Anjaleena Barclay
-							<div style="height: 400px; width: 800px;font-size: 50px;margin-top:30px;">Web Developer</div>
+						<div class="floating" style="height: 30px; width: 800px;font-size: calc(25px + 6vmin);">
+							<h1 style="margin: 0;">Anjaleena Barclay</h1>
+							<div style="height: 200px; width: 800px;font-size: 50px;">
+								<h1 style="margin: 0;">Web Developer</h1>
+							</div>
 						</div>
 							<ul class="actions special">
 
