changed the size of the text of the headings on the main banner

--- a/spectral/indexSpectral.html
+++ b/spectral/indexSpectral.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">AB</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -44,14 +44,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-						<div class="floating" style="height: 30px; width: 800px;font-size: calc(25px + 6vmin);">
-							<h1 style="margin: 0;">Anjaleena Barclay</h1>
-							<div style="height: 200px; width: 800px;font-size: 50px;">
-								<h1 style="margin: 0;">Web Developer</h1>
-							</div>
-						</div>
+							<h1 class="floating" style="margin: 0;font-size: calc(25px + 4vmin);">Anjaleena Barclay</h1>
+								<h1 class="floating" style="margin: 0;font-size: calc(25px + 3vmin);">Web Developer</h1>
 							<ul class="actions special">
-
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
