added an a tag to my email at the bottom of the page

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -208,7 +208,7 @@
 					<footer id="footer">
 						<h1>Connect With Me</h1>
 			<div class="links d-flex justify-content-center">
-						<span href="mailto:anjaleenabarclay@aol.com" target="blank">anjaleenabarclay@aol.com</span>
+						<span><a href="mailto:anjaleenabarclay@aol.com" target="blank">anjaleenabarclay@aol.com</a></span>
 						<ul class="icons">
 							<li><a style="font-size: calc(25px + 9vmin);" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a style="font-size: calc(25px + 9vmin);" href="https://github.com/anjaleenab" target="blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
